tests/errors/malformed-interval.fil
component Main<G>(@[G, 3] go: 1) -> () {}
