tests/errors/malformed-interval.expect
---CODE---
1
---STDERR---
error: Filament Parser:  --> tests/errors/malformed-interval.fil:1:24
  |
1 | component Main<G>(@[G, 3] go: 1) -> () {}
  |                        ^---
  |
  = expected identifier

